--- a/terraform/modules/dev_deploy_isc/docker-compose/docker-compose.yml
+++ b/terraform/modules/dev_deploy_isc/docker-compose/docker-compose.yml
@@ -48,8 +48,8 @@ services:
     ports:
       - 8080:8080
     environment:
-      - PRODUCT_CATALOG_SERVICE_ADDR= product-catalog-service:3550
-      - CURRENCY_SERVICE_ADDR = currency-service:7000
+      - PRODUCT_CATALOG_SERVICE_ADDR=product-catalog-service:3550
+      - CURRENCY_SERVICE_ADDR=currency-service:7000
   
   currency-service:
     build:
