--- a/terraform/modules/dev_deploy_isc/docker-compose/docker-compose.yml
+++ b/terraform/modules/dev_deploy_isc/docker-compose/docker-compose.yml
@@ -91,8 +91,13 @@ services:
     build:
       context: ./shippingservice
       dockerfile: Dockerfile
-   
+    environment:
+      PORT: ${SHIPPING_PORT}
+      DISABLE_STATS: ${DISABLE_STATS}
+      DISABLE_TRACING: ${DISABLE_TRACING}
+      DISABLE_PROFILER: ${DISABLE_PROFILER}
 
+   
   product-catalog-service:
     build:
       context: ./productcatalogservice
