se retiran algunas variables en shipping-service

--- a/terraform/modules/dev_deploy_isc/docker-compose/docker-compose.yml
+++ b/terraform/modules/dev_deploy_isc/docker-compose/docker-compose.yml
@@ -92,10 +92,10 @@ services:
       context: ./shippingservice
       dockerfile: Dockerfile
     environment:
-      PORT: ${SHIPPING_PORT}
-      DISABLE_STATS: ${DISABLE_STATS}
-      DISABLE_TRACING: ${DISABLE_TRACING}
-      DISABLE_PROFILER: ${DISABLE_PROFILER}
+       PORT: ${SHIPPING_PORT}
+  #    DISABLE_STATS: ${DISABLE_STATS}
+  #    DISABLE_TRACING: ${DISABLE_TRACING}
+  #    DISABLE_PROFILER: ${DISABLE_PROFILER}
 
    
   product-catalog-service:
