--- a/terraform/modules/dev_deploy_isc/docker-compose/docker-compose.yml
+++ b/terraform/modules/dev_deploy_isc/docker-compose/docker-compose.yml
@@ -43,12 +43,7 @@ services:
     build:
       context: ./emailservice
       dockerfile: Dockerfile
-  # El frontend no se pudo levantar. De acuerdo al error requeria las variables que estan definidas en 
-  # el environment, las cuales se probaron con el nombre_contenedor:puerto, nombre_contenedor, se 
-  # intentó con la IP, pero nada funcionó. Consecuentemente el frontend no levantó y el LB no llegó a 
-  # las instancias.
   
-
   frontend:
     build:
       context: ./frontend
@@ -91,6 +86,8 @@ services:
     build:
       context: ./shippingservice
       dockerfile: Dockerfile
+    ports:
+      - 50051:50051
     environment:
        PORT: ${SHIPPING_PORT}
   #    DISABLE_STATS: ${DISABLE_STATS}
